--- a/static/about.html
+++ b/static/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>FTP Home</title>
+    <title>About Us</title>
     <meta charset="utf-8" />
 
     <!-- CSS only -->
@@ -11,12 +11,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <link
-      id="theme"
-      rel="stylesheet"
-      type="text/css"
-      href="assets/my/css/style.css"
-    />
+    <link id="theme" rel="stylesheet" type="text/css" href="assets/my/css/style.css" />
   </head>
 
   <body>
@@ -24,7 +19,7 @@
       <nav>
         <ul>
           <li>
-            <a id="menu-home" class="active" href="/">Home</a>
+            <a id="menu-home" href="/">Home</a>
           </li>
           <li>
             <a id="menu-intro" href="/intro">Introduction</a>
@@ -40,16 +35,14 @@
           </li>
           <div class="about">
             <li>
-              <a id="menu-about" class="about" href="/about"
-                >About Us</a
-              >
+              <a id="menu-about" class="active" class="about" href="/about">About Us</a>
             </li>
           </div>
         </ul>
       </nav>
     </div>
     <div class="content">
-      <h1>FTP Home</h1>
+      <h1>About Us</h1>
     </div>
   </body>
 </html>
