--- a/static/about.html
+++ b/static/about.html
@@ -19,10 +19,7 @@
       <nav>
         <ul>
           <li>
-            <a id="menu-home" href="/">Home</a>
-          </li>
-          <li>
-            <a id="menu-intro" href="/intro">Introduction</a>
+            <a id="menu-intro" href="/">Introduction</a>
           </li>
           <li>
             <a id="menu-history" href="/history">History</a>
@@ -43,6 +40,21 @@
     </div>
     <div class="content">
       <h1>About Us</h1>
+      <h3>Group 3</h3>
+      <div>
+        Group Members (in alphabetic order)
+        <ul>
+          <li>
+            <b>Chun-Yi Kuo</b>: Website design
+          </li>
+          <li>
+            <b>Manoj Dhami</b>: FTP Research
+          </li>
+          <li>
+            <b>Seong Hoon Kim</b>: FTP Research
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
