--- a/static/intro.html
+++ b/static/intro.html
@@ -1,48 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>FTP Introduction</title>
-    <meta charset="utf-8" />
 
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
-    <link id="theme" rel="stylesheet" type="text/css" href="assets/my/css/style.css" />
-  </head>
+<head>
+  <title>FTP Introduction</title>
+  <meta charset="utf-8" />
 
-  <body>
-    <div class="menu">
-        <nav>
-          <ul>
-            <li>
-              <a id="menu-home" href="/">Home</a>
-            </li>
-            <li>
-              <a id="menu-intro" class="active" href="/intro">Introduction</a>
-            </li>
-            <li>
-              <a id="menu-history" href="/history">History</a>
-            </li>
-            <li>
-              <a id="menu-mechanism" href="/mechanism">Mechanism</a>
-            </li>
-            <li>
-              <a id="menu-reference" href="/reference">Reference</a>
-            </li>
-            <div class="about">
-              <li>
-                <a id="menu-about" class="about" href="/about">About Us</a>
-              </li>
-          </div>
-        </ul>
-      </nav>
-    </div>
-    <div class="content">
-      <h1>FTP Intro</h1>
-    </div>
-  </body>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+  <link id="theme" rel="stylesheet" type="text/css" href="assets/my/css/style.css" />
+  <script src="assets/my/js/script.js"></script>
+</head>
+
+<body>
+  <div class="menu">
+    <nav>
+      <ul>
+        <li>
+          <a id="menu-intro" class="active" href="/">Introduction</a>
+        </li>
+        <li>
+          <a id="menu-history" href="/history">History</a>
+        </li>
+        <li>
+          <a id="menu-mechanism" href="/mechanism">Mechanism</a>
+        </li>
+        <li>
+          <a id="menu-reference" href="/reference">Reference</a>
+        </li>
+        <div class="about">
+          <li>
+            <a id="menu-about" class="about" href="/about">About Us</a>
+          </li>
+        </div>
+      </ul>
+    </nav>
+  </div>
+  <div class="content">
+    <h1>FTP Introduction</h1>
+    <p>
+      File transfer protocol refers to the method used to transfer files via a
+      network between devices (FTP). When one party agrees to let the other
+      send or receive files online, the process is successful. File storage is
+      now usually done in the cloud, which is frequently a remote safe region.
+      It was initially used as a means of communication and information
+      sharing between two physical machines.
+    </p>
+    <p>
+      FTP can be used by a company or individual to transmit data from one
+      computer system to another, or by a website to upload or download files
+      from its servers. FTP's objectives are:
+    <ul>
+      <li>Promoting file sharing</li>
+      <li>Promote the usage of remote computers in an implicit or indirect manner (via programs).</li>
+      <li>Safeguard a user from variations in file storage methods between hosts.</li>
+      <li>Transfer data in a reliable and efficient manner.</li>
+    </ul>
+    </p>
+    <p>
+      Even though it can be accessed by users via a terminal,
+      FTP is primarily made to be used by programs.
+      This specification seeks to meet the different requirements
+      of users of maxi-hosts, mini-hosts, personal workstations,
+      and TACs with an easy-to-implement protocol design.
+    </p>
+  </div>
+</body>
+
 </html>
