--- a/static/reference.html
+++ b/static/reference.html
@@ -1,48 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Reference</title>
-    <meta charset="utf-8" />
 
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
-    <link id="theme" rel="stylesheet" type="text/css" href="assets/my/css/style.css" />
-  </head>
+<head>
+  <title>Reference</title>
+  <meta charset="utf-8" />
 
-  <body>
-    <div class="menu">
-        <nav>
-          <ul>
-            <li>
-              <a id="menu-home" href="/">Home</a>
-            </li>
-            <li>
-              <a id="menu-intro" href="/intro">Introduction</a>
-            </li>
-            <li>
-              <a id="menu-history" href="/history">History</a>
-            </li>
-            <li>
-              <a id="menu-mechanism" href="/mechanism">Mechanism</a>
-            </li>
-            <li>
-              <a id="menu-reference" class="active" href="/reference">Reference</a>
-            </li>
-            <div class="about">
-              <li>
-                <a id="menu-about" class="about" href="/about">About Us</a>
-              </li>
-          </div>
-        </ul>
-      </nav>
-    </div>
-    <div class="content">
-      <h1>FTP Reference</h1>
-    </div>
-  </body>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+  <link id="theme" rel="stylesheet" type="text/css" href="assets/my/css/style.css" />
+  <script src="assets/my/js/script.js"></script>
+</head>
+
+<body>
+  <div class="menu">
+    <nav>
+      <ul>
+        <li>
+          <a id="menu-intro" href="/">Introduction</a>
+        </li>
+        <li>
+          <a id="menu-history" href="/history">History</a>
+        </li>
+        <li>
+          <a id="menu-mechanism" href="/mechanism">Mechanism</a>
+        </li>
+        <li>
+          <a id="menu-reference" class="active" href="/reference">Reference</a>
+        </li>
+        <div class="about">
+          <li>
+            <a id="menu-about" class="about" href="/about">About Us</a>
+          </li>
+        </div>
+      </ul>
+    </nav>
+  </div>
+  <div class="content">
+    <h1>FTP Reference</h1>
+    <ol style="font-size: larger;">
+      <li>
+        <i>How FTP Works. (n.d.). Retrieved August 10, 2022, from</i><br>
+        <a href="https://www.omnisecu.com/tcpip/how-ftp-works.php">https://www.omnisecu.com/tcpip/how-ftp-works.php</a>
+      </li>
+      <li>
+        Wikimedia Foundation. (2022, August 4). <i>File transfer protocol.</i> Wikipedia. Retrieved August 10, 2022, from<br>
+        <a
+          href="https://en.wikipedia.org/wiki/File_Transfer_Protocol#Syntax">https://en.wikipedia.org/wiki/File_Transfer_Protocol#Syntax</a>
+      </li>
+      <li>
+        <i>RFC 959 - file transfer protocol.</i> Document search and retrieval page. (n.d.). Retrieved August 10, 2022, from<br>
+        <a href="https://datatracker.ietf.org/doc/html/rfc959">https://datatracker.ietf.org/doc/html/rfc959</a>
+      </li>
+      <li>
+        <i>File transfer protocol (FTP).</i> File Transfer Protocol (FTP) · MAVLink Developer Guide. (n.d.). Retrieved August 10, 2022, from<br>
+        <a href="https://mavlink.io/en/services/ftp.html">https://mavlink.io/en/services/ftp.html</a>
+      </li>
+      <li>
+        Kikobeats. (n.d.). FTP. Server Sandbox. Retrieved August 10, 2022, from <br>
+        <a href="https://kikobeats.github.io/server-sandbox/03.%20Services/FTP/01.%20Introduction.html">
+          https://kikobeats.github.io/server-sandbox/03.%20Services/FTP/01.%20Introduction.html</a>
+      </li>
+    </ol>
+  </div>
+</body>
+
 </html>
