--- a/static/reference.html
+++ b/static/reference.html
@@ -41,24 +41,24 @@
     <ol style="font-size: larger;">
       <li>
         <i>How FTP Works. (n.d.). Retrieved August 10, 2022, from</i><br>
-        <a href="https://www.omnisecu.com/tcpip/how-ftp-works.php">https://www.omnisecu.com/tcpip/how-ftp-works.php</a>
+        <a href="https://www.omnisecu.com/tcpip/how-ftp-works.php" target="_blank">https://www.omnisecu.com/tcpip/how-ftp-works.php</a>
       </li>
       <li>
         Wikimedia Foundation. (2022, August 4). <i>File transfer protocol.</i> Wikipedia. Retrieved August 10, 2022, from<br>
         <a
-          href="https://en.wikipedia.org/wiki/File_Transfer_Protocol#Syntax">https://en.wikipedia.org/wiki/File_Transfer_Protocol#Syntax</a>
+          href="https://en.wikipedia.org/wiki/File_Transfer_Protocol#Syntax" target="_blank">https://en.wikipedia.org/wiki/File_Transfer_Protocol#Syntax</a>
       </li>
       <li>
         <i>RFC 959 - file transfer protocol.</i> Document search and retrieval page. (n.d.). Retrieved August 10, 2022, from<br>
-        <a href="https://datatracker.ietf.org/doc/html/rfc959">https://datatracker.ietf.org/doc/html/rfc959</a>
+        <a href="https://datatracker.ietf.org/doc/html/rfc959" target="_blank">https://datatracker.ietf.org/doc/html/rfc959</a>
       </li>
       <li>
         <i>File transfer protocol (FTP).</i> File Transfer Protocol (FTP) · MAVLink Developer Guide. (n.d.). Retrieved August 10, 2022, from<br>
-        <a href="https://mavlink.io/en/services/ftp.html">https://mavlink.io/en/services/ftp.html</a>
+        <a href="https://mavlink.io/en/services/ftp.html" target="_blank">https://mavlink.io/en/services/ftp.html</a>
       </li>
       <li>
         Kikobeats. (n.d.). FTP. Server Sandbox. Retrieved August 10, 2022, from <br>
-        <a href="https://kikobeats.github.io/server-sandbox/03.%20Services/FTP/01.%20Introduction.html">
+        <a href="https://kikobeats.github.io/server-sandbox/03.%20Services/FTP/01.%20Introduction.html" target="_blank">
           https://kikobeats.github.io/server-sandbox/03.%20Services/FTP/01.%20Introduction.html</a>
       </li>
     </ol>
