--- a/static/about.html
+++ b/static/about.html
@@ -40,6 +40,7 @@
     </div>
     <div class="content">
       <h1>About Us</h1>
+      <p style="font-size: larger;">This website is for submission purpose of Assignment 2, DCF255 NGG, Summer 2022, Seneca College</p>
       <h3>Group 3</h3>
       <div>
         Group Members (in alphabetic order)
