change image size

--- a/static/mechanism.html
+++ b/static/mechanism.html
@@ -65,8 +65,10 @@
       </p>
       <h3>Active Mode</h3>
       <div>
-        <img src="https://kikobeats.github.io/server-sandbox/assets/ftp-active.png" height="100%" width="70%"
-          alt="FTP Active Mode" />
+        <a href="https://kikobeats.github.io/server-sandbox/assets/ftp-active.png" target="_blank">
+          <img src="https://kikobeats.github.io/server-sandbox/assets/ftp-active.png" height="100%" width="40%"
+          alt="FTP Active Mode" title="Click For Original Size"/>
+        </a>
       </div>
       <div>
         <label for="active-mode"><i><small>Fig 1. Active Mode</small></i></label>
@@ -83,8 +85,10 @@
       </div>
       <h3>Passive Mode</h3>
       <div>
-        <img src="https://kikobeats.github.io/server-sandbox/assets/ftp-passive.png" height="100%" width="70%"
-          alt="FTP Passive Mode" />
+        <a href="https://kikobeats.github.io/server-sandbox/assets/ftp-passive.png" target="_blank">
+          <img src="https://kikobeats.github.io/server-sandbox/assets/ftp-passive.png" height="100%" width="40%"
+          alt="FTP Passive Mode" title="Click For Original Size"/>
+        </a>
       </div>
       <div>
         <label for="passive-mode"><i><small>Fig 2. Passive Mode</small></i></label>
