--- a/static/history.html
+++ b/static/history.html
@@ -39,16 +39,13 @@
   <div class="content">
     <h1>FTP History</h1>
     <p>
-      The development of FTP has been gradual throughout time. The first File
-      Transfer Protocol specification was authored by Abhay Bhushan and
-      published on April 16, 1971, as RFC 114. Up until 1980, NCP, the
-      predecessor of TCP/IP, supported FTP. Later, it was replaced by the
-      TCP/IP version of the protocol, RFC 765 (June 1980), and the current
-      standard, RFC 959 (October 1985). RFC 1579 (February 1994), which
-      introduces Firewall-Friendly FTP (passive mode), RFC 2228 (June 1997),
-      which calls for security improvements, and RFC 2428 (September 1998),
-      which adds support for IPv6 and specifies a new type of passive mode,
-      are just a few of the proposed measures that amend RFC 959.
+      Over time, the growth of FTP has been gradual. Abhay Bhushan wrote the initial specification for the File Transfer
+      Protocol, which was released as RFC 114 on April 16 of that year. FTP was supported by NCP, TCP/forerunner, IP's
+      until 1980. Later, the TCP/IP version of the protocol, RFC 765 (June 1980), and the current standard, RFC 959,
+      took its place (October 1985). These are just a few of the proposed changes that alter RFC 959, such as the
+      addition of Firewall-Friendly FTP (passive mode) in RFC 1579 (February 1994), the request for security upgrades in
+      RFC 2228 (June 1997), and the addition of support for IPv6 and a new type of passive mode in RFC 2428 (September
+      1998) in RFC 2428.
     </p>
     <p>
       The latest FTP specification intends to improve various protocol
