--- a/static/intro.html
+++ b/static/intro.html
@@ -52,9 +52,9 @@
       from its servers. FTP's objectives are:
     <ul>
       <li>Promoting file sharing</li>
-      <li>Promote the usage of remote computers in an implicit or indirect manner (via programs).</li>
+      <li>Promoting the usage of remote computers in an implicit or indirect manner (via programs).</li>
       <li>Safeguard a user from variations in file storage methods between hosts.</li>
-      <li>Transfer data in a reliable and efficient manner.</li>
+      <li>Transferring data in a reliable and efficient manner.</li>
     </ul>
     </p>
     <p>
