--- a/static/history.html
+++ b/static/history.html
@@ -59,6 +59,12 @@
       automatically satisfy the previous criterion.
     </p>
   </div>
+
+  <div>
+    <footer>
+      <p>© 2022 Survival Squad</p>
+    </footer>
+  </div>
 </body>
 
 </html>
