--- a/static/intro.html
+++ b/static/intro.html
@@ -65,6 +65,12 @@
       and TACs with an easy-to-implement protocol design.
     </p>
   </div>
+
+  <div>
+    <footer>
+      <p>© 2022 Survival Squad</p>
+    </footer>
+  </div>
 </body>
 
 </html>
