--- a/static/reference.html
+++ b/static/reference.html
@@ -63,6 +63,12 @@
       </li>
     </ol>
   </div>
+
+  <div>
+    <footer>
+      <p>© 2022 Survival Squad</p>
+    </footer>
+  </div>
 </body>
 
 </html>
