--- a/static/about.html
+++ b/static/about.html
@@ -57,5 +57,11 @@
         </ul>
       </div>
     </div>
+
+    <div>
+      <footer>
+        <p>© 2022 Survival Squad</p>
+      </footer>
+    </div>
   </body>
 </html>
