--- a/static/mechanism.html
+++ b/static/mechanism.html
@@ -231,6 +231,12 @@
     </div>
 
   </div>
+
+  <div>
+    <footer>
+      <p>© 2022 Survival Squad</p>
+    </footer>
+  </div>
 </body>
 
 </html>
